2004-11-05  Zoltan Varga  <vargaz@freemail.hu>

	* tramp-sparc.c (mono_arch_create_jit_trampoline): Fix sparc build.

	* tramp-amd64.c (mono_arch_create_jit_trampoline): Fix amd64 build.

	* mini.h mini.c tramp-*.c: Moved xp parts of JIT trampoline creation
	into a new function mono_create_jit_trampoline ().

2004-11-02  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (get_spec): Allow tracing of classes without a namespace.

2004-11-02  Sebastien Pouliot  <sebastien@ximian.com>

	* mini.c: Fix pointer overwrite in mini_method_compile.

2004-11-2  Geoff Norton  <gnorton@customerdna.com>

	* inssel-ppc.brg (OP_OUTARG_VT (CEE_LDOBJ (base))):
	The darwin ABI needs some special handling for 1 and 2 byte structs
	Lets use lbz/lhz instead of lwz everywhere.
	* mini-ppc.c (calculate_sizes):  The Darwin ABI needs from special handling
	for 1 and 2 byte structs and struct which are size >= 3 || size % 4 != 0.
	Use stb/sth for the former, and put the latter always on stack instead of in
	argument registers.

2004-10-30  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (is_filenamechar): Add '_'.

2004-10-29  Neale Ferguson  <Neale.Ferguson@SoftwareAG-usa.com>

	* mini-s390.c: Fix prolog length to allow for large trace requirements.

	* exceptions-s390.c: Remove dwarf unwinding stuff that was unused.

2004-10-29  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (libgc_libs): Do some automake magic so libmono/mono
	depends on libmonogc. Fixes #68805.

2004-10-26  Miguel de Icaza  <miguel@ximian.com>

	* mini.c (mono_jit_free_method): Provide extra information for
	this error.  Currently this leaks, but will be turned into a
	developer option in the future.

2004-10-26  Zoltan Varga  <vargaz@freemail.hu>

	* driver.c (mono_main): Applied patch from Willibald Krenn <willibald.krenn@gmx.at>. Make --graph work for icalls and pinvoke methods.

2004-10-25  Zoltan Varga  <vargaz@freemail.hu>

	* aot.c (mono_aot_load_method): Align PATCH_INFO_R8 on an 8 byte 